--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
- Volume in drive C is OSDisk
- Volume Serial Number is 4E8C-ED5F
-
- Directory of C:\Users\dl0586657\Documents\gitexample
-
-02/25/2019  03:39 PM    <DIR>          .
-02/25/2019  03:39 PM    <DIR>          ..
-02/25/2019  03:39 PM                 0 index.html
-               1 File(s)              0 bytes
-               2 Dir(s)  815,854,014,464 bytes free
+<h1> hello world</h1>
